--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
         </header>
         <!-- About-->
-        <section class="content-section bg-danger" id="store">
+        <section class="content-section bg-warning" id="store">
             <div class="container px-4 px-lg-5 text-center">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-10">
