--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             <div class="container px-4 px-lg-5">
                 <ul class="list-inline mb-5">
                     <li class="list-inline-item">
-                        <a href="https://discord.gg/CDvTym7xb5"><i class="bi bi-discord"></i></a>
+                        <a class="btn btn-dark btn-xl" href="https://store.phoenixmc.xyz">Store</a>
                     </li>
                     <li class="list-inline-item">
                         <a class="social-link rounded-circle text-white mr-3" href="#!"><i class="icon-social-twitter"></i></a>
