--- a/index.html
+++ b/index.html
@@ -159,13 +159,10 @@
             <div class="container px-4 px-lg-5">
                 <ul class="list-inline mb-5">
                     <li class="list-inline-item">
-                        <a class="btn btn-dark btn-xl" href="https://store.phoenixmc.xyz">Store</a>
+                        <a class="btn btn-dark btn-xl" href="https://discord.gg/CDvTym7xb5">Discord</a>
                     </li>
                     <li class="list-inline-item">
-                        <a class="social-link rounded-circle text-white mr-3" href="#!"><i class="icon-social-twitter"></i></a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a class="social-link rounded-circle text-white" href="#!"><i class="icon-social-github"></i></a>
+                        <a class="btn btn-darj btn-xl" href="https://minecraft-mp.com/server/305993/vote/">Server Vote</a>
                     </li>
                 </ul>
                 <p class="text-muted small mb-0">Copyright &copy; Your Website 2022</p>
