--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                         <a class="btn btn-darj btn-xl" href="https://minecraft-mp.com/server/305993/vote/">Server Vote</a>
                     </li>
                 </ul>
-                <p class="text-muted small mb-0">Copyright &copy; Your Website 2022</p>
+                <p class="text-muted small mb-0">Copyright &copy; PhoenixMC 2022</p>
             </div>
         </footer>
         <!-- Scroll to Top Button-->
