--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                         <a class="btn btn-dark btn-xl" href="https://discord.gg/CDvTym7xb5">Discord</a>
                     </li>
                     <li class="list-inline-item">
-                        <a class="btn btn-darj btn-xl" href="https://minecraft-mp.com/server/305993/vote/">Server Vote</a>
+                        <a class="btn btn-dark btn-xl" href="https://minecraft-mp.com/server/305993/vote/">Server Vote</a>
                     </li>
                 </ul>
                 <p class="text-muted small mb-0">Copyright &copy; PhoenixMC 2022</p>
