--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <div class="container px-4 px-lg-5">
                 <ul class="list-inline mb-5">
                     <li class="list-inline-item">
-                        <a class="btn btn-dark btn-xl" href="https://discord.gg/CDvTym7xb5">Discord</a>
+                        <a class="bi bi-discord" href="https://discord.gg/CDvTym7xb5"</a>
                     </li>
                     <li class="list-inline-item">
                         <a class="bi bi-discord" href="https://minecraft-mp.com/server/305993/vote/">Server Vote</a>
